syntax = "proto3";

package proto_transport_router;

message RouterSet {
   
    int32          bus_wait_time = 1;
    double         bus_velocity = 2;
   
}